--- a/modules/ROOT/pages/troubleshooting.adoc
+++ b/modules/ROOT/pages/troubleshooting.adoc
@@ -110,13 +110,11 @@ When using the `--logdir` command, each sync run creates a new file.
 To limit the amount of data that accumulates over time, you can specify the `--logexpire <hours>` command.
 When combined with the `--logdir` command, the client automatically erases saved log data in the directory that is older than the specified number of hours.
 
+Adding the `--logdebug` flag increases the verbosity of the generated log files.
+
 As an example, to define a test where you keep log data for two days, you can issue the following command:
 
-```
-owncloud --logdir /tmp/owncloud_logs --logexpire 48
-```
-
-Adding the `--logdebug` flag increases the verbosity of the generated log files.
+`\` owncloud --logdir /tmp/owncloud_logs --logexpire 48``
 
 ==== Logging in the Console
 
@@ -140,7 +138,7 @@ To further increase the verbosity of the output you can also combine these comma
 
 ==== Control Log Content
 
-Thanks to the Qt framework, logging can be controlled at run-time through the `QT_LOGGING_RULES` environment variable.
+Thanks to the Qt framework, logging can be controlled at run-time through the QT_LOGGING_RULES environment variable.
 
 *Exclude log item categories*
 
@@ -163,7 +161,7 @@ QT_LOGGING_RULES='sync.httplogger=true' \
 ```
 QT_LOGGING_RULES='*=false;sync.httplogger=true' \
   /PATH/TO/CLIENT \
-  --logfile <file>
+  --logdebug --logfile <file>
 ```
 
 === ownCloud server Log File
