--- a/modules/ROOT/pages/building.adoc
+++ b/modules/ROOT/pages/building.adoc
@@ -98,17 +98,59 @@ The ownCloud team has its own repository containing non-standard recipes.
 To set up your build environment for development using http://mxcl.github.com/homebrew/[HomeBrew]:
 
 . Install https://developer.apple.com/xcode[Xcode].
-. Install Xcode command line tools using `xcode-select --install`.
-. Install Homebrew using `/usr/bin/ruby -e $(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install)`.
-. Add the ownCloud repository using the command `brew tap owncloud/owncloud`
-. Install a Qt5 version, ideally from from 5.10.1, using the command `brew install qt5`.
-. Install any missing dependencies, using the command: `brew install $(brew deps owncloud-client)`.
-. Install qtkeychain by running `git clone https://github.com/frankosterfeld/qtkeychain.git`. 
-Make sure you make the same install prefix as later while building the client 
-e.g., `-DCMAKE_INSTALL_PREFIX=/Path/to/client/../install`.
+. Install Xcode command line tools using
++
+[source,console]
+----
+xcode-select --install
+----
+. Install Homebrew using
++
+[source,console]
+----
+/usr/bin/ruby -e \
+    $(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install)
+----
+. Add the ownCloud repository using the command 
++
+[source,console]
+----
+brew tap owncloud/owncloud
+----
+. Install a Qt5 version, ideally from from 5.10.1, using the command
++
+[source,console]
+----
+brew install qt5
+----
+. Install any missing dependencies, using the command:
++
+[source,console]
+----
+brew install $(brew deps owncloud-client)
+----
+. Install `qtkeychain` by running
++
+[source,console]
+----
+git clone https://github.com/frankosterfeld/qtkeychain.git
+----
+Make sure you make the same install prefix as later while building the client e.g.
++
+[source,console]
+----
+-DCMAKE_INSTALL_PREFIX=/Path/to/client/../install
+----
 . For compilation of the client, follow the xref:generic-build-instructions[generic build instructions].
 . Install the http://s.sudre.free.fr/Software/Packages/about.html[Packages] package creation tool.
-. In the build directory, run `admin/osx/create_mac.sh <CMAKE_INSTALL_DIR> <build dir> <installer sign identity>`. If you have a developer signing certificate, you can specify its Common Name as a third parameter (use quotes) to have the package signed automatically.
+. In the build directory, run
++
+[source,console]
+----
+admin/osx/create_mac.sh <CMAKE_INSTALL_DIR> <build dir> <installer sign identity>
+----
++
+If you have a developer signing certificate, you can specify its Common Name as a third parameter (use quotes) to have the package signed automatically.
 +
 [NOTE]
 ====
