--- a/modules/ROOT/pages/advanced_usage/command_line_options.adoc
+++ b/modules/ROOT/pages/advanced_usage/command_line_options.adoc
@@ -1,10 +1,9 @@
 = Command Line Options
+:toc: right
 
 == Introduction
 
-Depending on your operating system, you can start the ownCloud client from the command line by typing
-`owncloud` or `owncloud.exe`. You may need to change to the directory of the binary first. When starting
-`owncloud` manually, you can add options to this command.
+Depending on your operating system, you can start the ownCloud client from the command line by typing `owncloud` or `owncloud.exe`. You may need to change to the directory of the binary first. When starting `owncloud` manually, you can add options to this command.
 
 == List Options
 
