--- a/modules/ROOT/pages/installing.adoc
+++ b/modules/ROOT/pages/installing.adoc
@@ -1,16 +1,16 @@
 = Installing the Desktop Synchronization Client
 :toc: right
 
-You can download the latest version of the ownCloud Desktop Synchronization Client from the https://owncloud.com/download/#desktop-clients[ownCloud download page].
-There are clients for _Linux_, _macOS_, and _Microsoft Windows_.
+You can download the latest version of the ownCloud Desktop Synchronization Client from the https://owncloud.com/download/#desktop-clients[ownCloud download page]. There are clients for _Linux_, _macOS_, and _Microsoft Windows_.
 
-Installation on Mac OS X and Windows is the same as for any software application: download the program and then double-click it to launch the installation, and then follow the installation wizard.
-After it is installed and configured the sync client will automatically keep itself updated; see `autoupdate` for more information.
+Installation on Mac OS X and Windows is the same as for any software application: download the program and then double-click it to launch the installation, and then follow the installation wizard. After it is installed and configured the sync client will automatically keep itself updated; see `autoupdate` for more information.
 
-Linux users must follow the instructions on the download page to add the appropriate repository for their Linux distribution, install the signing key, and then use their package managers to install the desktop sync client.
-Linux users will also update their sync clients via package manager, and the client will display a notification when an update is available.
+Linux users must follow the instructions on the download page to add the appropriate repository for their Linux distribution, install the signing key, and then use their package managers to install the desktop sync client. Linux users will also update their sync clients via package manager, and the client will display a notification when an update is available.
 
-Linux users must also have a password manager enabled, such as https://wiki.gnome.org/Projects/GnomeKeyring/[GNOME Keyring] or https://utils.kde.org/projects/kwalletmanager/[KWallet], so that the sync client can login automatically.
+Linux users must also have a password manager enabled, such as
+https://wiki.gnome.org/Projects/GnomeKeyring/[GNOME Keyring] or
+https://utils.kde.org/projects/kwalletmanager/[KWallet],
+so that the sync client can login automatically.
 
 You will also find links to source code archives and older versions on the download page.
 
@@ -34,17 +34,17 @@ If you just want to install ownCloud Desktop Synchronization Client on your loca
 
 The MSI installer provides several features that can be installed or removed individually, which you can also control via command-line, if you are automating the installation, then run the following command:
 
-....
+[source,console]
+----
 msiexec /passive /i ownCloud-x.y.z.msi.
-....
+----
 
-The command will install the ownCloud Desktop Synchronization Client into the default location with the default features enabled.
-If you want to disable, e.g., desktop shortcut icons you can simply change the above command to the following:
+The command will install the ownCloud Desktop Synchronization Client into the default location with the default features enabled. If you want to disable, e.g., desktop shortcut icons you can simply change the above command to the following:
 
 [source,console]
-....
+----
 msiexec /passive /i ownCloud-x.y.z.msi REMOVE=DesktopShortcut.
-....
+----
 
 See the following table for a list of available features:
 
@@ -81,9 +81,9 @@ See the following table for a list of available features:
 You can also choose to only install the client itself by using the following command:
 
 [source,console]
-....
+----
 msiexec /passive /i ownCloud-x.y.z.msi ADDDEFAULT=Client.
-....
+----
 
 If you for instance want to install everything but the `DesktopShortcut` and the `ShellExtensions` feature, you have two possibilities:
 
@@ -102,7 +102,7 @@ msiexec /passive /i ownCloud-x.y.z.msi NO_DESKTOP_SHORTCUT="1"
 NO_SHELL_EXTENSIONS="1"
 ----
 
-NOTE: The ownCloud .msi remembers these properties, so you don't need to specify them on upgrades.
+NOTE: The ownCloud .msi file remembers these properties, so you don't need to specify them on upgrades.
 
 NOTE: You cannot use these to change the installed features, if you want to do that, see the next section.
 
@@ -126,42 +126,40 @@ msiexec /passive /i ownCloud-x.y.z.msi REMOVE="DesktopShortcut"
 
 Windows keeps track of the installed features and using `REMOVE` or `ADDDEFAULT` will only affect the mentioned features.
 
-Compare https://msdn.microsoft.com/en-us/library/windows/desktop/aa371194(v=vs.85).aspx[REMOVE] and https://msdn.microsoft.com/en-us/library/windows/desktop/aa367518(v=vs.85).aspx[ADDDEFAULT] on the Windows Installer Guide.
+Compare https://msdn.microsoft.com/en-us/library/windows/desktop/aa371194(v=vs.85).aspx[REMOVE] and 
+https://msdn.microsoft.com/en-us/library/windows/desktop/aa367518(v=vs.85).aspx[ADDDEFAULT]
+on the Windows Installer Guide.
 
 NOTE: You cannot specify REMOVE on initial installation as it will disable all features.
 
 === Installation Folder
 
-You can adjust the installation folder by specifying the `INSTALLDIR`
-property like this.
+You can adjust the installation folder by specifying the `INSTALLDIR` property like this.
 
-....
+[source,console]
+----
 msiexec /passive /i ownCloud-x.y.z.msi INSTALLDIR="C:\Program Files (x86)\Non Standard ownCloud Client Folder"
-....
+----
 
-Be careful when using PowerShell instead of `cmd.exe`, it can be tricky to get the whitespace escaping right there.
-Specifying the `INSTALLDIR`
-like this only works on first installation, you cannot simply re-invoke the .msi with a different path.
-If you still need to change it,
-uninstall it first and reinstall it with the new path.
+Be careful when using PowerShell instead of `cmd.exe`, it can be tricky to get the whitespace escaping right there. Specifying the `INSTALLDIR` like this only works on first installation, you cannot simply re-invoke the .msi with a different path. If you still need to change it, uninstall it first and reinstall it with the new path.
 
 === Disabling Automatic Updates.
 
-To disable automatic updates, you can pass the `SKIPAUTOUPDATE`
-property.
+To disable automatic updates, you can pass the `SKIPAUTOUPDATE` property.
 
-....
+[source,console]
+----
 msiexec /passive /i ownCloud-x.y.z.msi SKIPAUTOUPDATE="1"
-....
+----
 
 === Launch After Installation
 
-To launch the client automatically after installation, you can pass the.
-`LAUNCH` property.
+To launch the client automatically after installation, you can pass the `LAUNCH` property.
 
-....
+[source,console]
+----
 msiexec /i ownCloud-x.y.z.msi LAUNCH="1"
-....
+----
 
 This option also removes the checkbox to let users decide if they want to launch the client for non passive/quiet mode.
 
@@ -169,8 +167,7 @@ NOTE: This option does not have any effect without GUI.
 
 === No Reboot After Installation
 
-The ownCloud Client schedules a reboot after installation to make sure the Explorer extension is correctly (un)loaded.
-If you're taking care of the reboot yourself, you can set the `REBOOT` property.
+The ownCloud Client schedules a reboot after installation to make sure the Explorer extension is correctly (un)loaded. If you're taking care of the reboot yourself, you can set the `REBOOT` property.
 
 [source,console]
 ----
@@ -187,23 +184,19 @@ msiexec /i ownCloud-x.y.z.msi DO_NOT_SCHEDULE_REBOOT="1"
 
 == Installation Wizard
 
-The installation wizard takes you step-by-step through configuration options and account setup.
-First you need to enter the URL of your ownCloud server.
+The installation wizard takes you step-by-step through configuration options and account setup. First you need to enter the URL of your ownCloud server.
 
-image:client-1.png[form for entering ownCloud server URL]
+image:client-1.png[form for entering ownCloud server URL,width=60%]
 
 Enter your ownCloud login on the next screen.
 
-image:client-2.png[form for entering your ownCloud login]
+image:client-2.png[form for entering your ownCloud login,width=60%]
 
-On the _"Local Folder Option"_ screen you may sync all of your files on the ownCloud server, or select individual folders.
-The default local sync folder is `ownCloud`, in your home directory.
-You may change this as well.
+On the _"Local Folder Option"_ screen you may sync all of your files on the ownCloud server, or select individual folders. The default local sync folder is `ownCloud`, in your home directory. You may change this as well.
 
-image:client-3.png[Select which remote folders to sync, and which local folder to store them in.]
+image:client-3.png[Select which remote folders to sync, and which local folder to store them in,width=60%]
 
-When you have completed selecting your sync folders, click the _"Connect"_ button at the bottom right.
-The client will attempt to connect to your ownCloud server, and when it is successful you'll see two buttons:
+When you have completed selecting your sync folders, click the _"Connect"_ button at the bottom right. The client will attempt to connect to your ownCloud server, and when it is successful you'll see two buttons:
 
 * One to connect to your ownCloud Web GUI.
 * One to open your local folder.
