--- a/modules/ROOT/pages/removing.adoc
+++ b/modules/ROOT/pages/removing.adoc
@@ -1,18 +1,16 @@
 = Removing the Desktop Synchronization Client
+:toc: right
 
 == Removing the Configuration File
 
-When you remove the client - the configuration file remains on your system. If you then decide to install
-the client again, you won't need to re-enter the connection information.
+When you remove the client - the configuration file remains on your system. If you then decide to install the client again, you won't need to re-enter the connection information.
  
-In case you want a clean removal of the client, you manually have to delete the configuration file.
-The location of the configuration file is operating system dependent and can be found in the
+In case you want a clean removal of the client, you manually have to delete the configuration file. The location of the configuration file is operating system dependent and can be found in the
 xref:advanced_usage/configuration_file.adoc[Configuration File] description.
 
 == Windows Navigation Sidebar
 
-If you have removed the Windows Synchronization Client but still have the ownCloud shortcut or symbol in
-the Windows Navigation Side Bar, here is how you to remove it:
+If you have removed the Windows Synchronization Client but still have the ownCloud shortcut or symbol in the Windows Navigation Side Bar, here is how you to remove it:
 
 1. Open `regedit`. (press the Windows Key and type regedit)
 2. Search (CTL+F) for the name of the client, in this case `owncloud `.
