--- a/books/ownCloud_Desktop_Client_Manual.adoc
+++ b/books/ownCloud_Desktop_Client_Manual.adoc
@@ -5,23 +5,8 @@ The ownCloud Team <docs@owncloud.com>
 :homepage: https://github.com/owncloud/client
 :listing-caption: Listing
 :toc:
-:toclevels: 1
+:toclevels: 2
 :icons: font
 :icon-set: octicon
+:module_base_path: modules/ROOT/pages/
 
-include::modules/ROOT/pages/index.adoc[leveloffset=+1]
-include::modules/ROOT/pages/installing.adoc[leveloffset=+1]
-include::modules/ROOT/pages/navigating.adoc[leveloffset=+1]
-include::modules/ROOT/pages/removing.adoc[leveloffset=+1]
-include::modules/ROOT/pages/conflicts.adoc[leveloffset=+1]
-include::modules/ROOT/pages/advanced_usage/environment_variables.adoc[leveloffset=+1]
-include::modules/ROOT/pages/advanced_usage/options.adoc[leveloffset=+1]
-include::modules/ROOT/pages/advanced_usage/configuration_file.adoc[leveloffset=+1]
-include::modules/ROOT/pages/advanced_usage/low_disk_space.adoc[leveloffset=+1]
-include::modules/ROOT/pages/advanced_usage/command_line_client.adoc[leveloffset=+1]
-include::modules/ROOT/pages/automatic_updater.adoc[leveloffset=+1]
-include::modules/ROOT/pages/faq.adoc[leveloffset=+1]
-include::modules/ROOT/pages/glossary.adoc[leveloffset=+1]
-include::modules/ROOT/pages/building.adoc[leveloffset=+1]
-include::modules/ROOT/pages/architecture.adoc[leveloffset=+1]
-include::modules/ROOT/pages/troubleshooting.adoc[leveloffset=+1]
