--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -3,7 +3,7 @@
 * xref:navigating.adoc[Using the Synchronization Client]
 * xref:removing.adoc[Removing the Client]
 * xref:conflicts.adoc[Manage Synchronisation Conflicts]
-* Advanced Usage
+* xref:advanced_usage/index.adoc[Advanced Usage]
 ** xref:advanced_usage/command_line_options.adoc[Options]
 ** xref:advanced_usage/configuration_file.adoc[Configuration File]
 ** xref:advanced_usage/environment_variables.adoc[Environment Variables]
@@ -12,7 +12,7 @@
 * xref:automatic_updater.adoc[The Automatic Updater]
 * xref:faq.adoc[FAQ]
 * xref:glossary.adoc[Glossary]
-* Appendices
-** xref:building.adoc[Building the Client]
-** xref:architecture.adoc[History and Architecture]
-** xref:troubleshooting.adoc[Troubleshooting]
+* xref:appendices/index.adoc[Appendices]
+** xref:appendices/building.adoc[Building the Client]
+** xref:appendices/architecture.adoc[History and Architecture]
+** xref:appendices/troubleshooting.adoc[Troubleshooting]
