--- a/modules/ROOT/pages/appendices/architecture.adoc
+++ b/modules/ROOT/pages/appendices/architecture.adoc
@@ -1,4 +1,4 @@
-= Appendix B: History and Architecture
+= Appendix History and Architecture
 :toc: right
 :toclevels: 1
 :theopengroup-url: http://pubs.opengroup.org/onlinepubs/009695399/utilities/xcu_chap02.html#tag_02_13_01
