--- a/modules/ROOT/pages/appendices/troubleshooting.adoc
+++ b/modules/ROOT/pages/appendices/troubleshooting.adoc
@@ -1,7 +1,6 @@
-= Appendix C: Troubleshooting
+= Appendix Troubleshooting
 :toc: right
 :toclevels: 1
-:experimental:
 :files-antivirus-app-url: https://github.com/owncloud/files_antivirus
 
 == Introduction
@@ -19,12 +18,12 @@ Performing a general ownCloud Server test::
   The first step in troubleshooting synchronization issues is to verify that you can log on to the ownCloud web application. To verify connectivity to the ownCloud server try logging in via your Web browser. If you are not prompted for your username and password, or if a red warning box appears on the page, your server setup requires modification. Please verify that your server installation is working correctly.
 
 Ensure the WebDAV API is working::
-  If all desktop clients fail to connect to the ownCloud Server, but access using the Web interface functions properly, the problem is often a misconfiguration of the WebDAV API. The ownCloud Client uses the built-in WebDAV access of the server content. Verify that you can log on to ownCloud's WebDAV server. To verify connectivity with the ownCloud WebDAV server, open a browser window and enter the address to the ownCloud WebDAV server. For example, if your ownCloud instance is installed at `\http://yourserver.com/owncloud`, your WebDAV server address is `\http://yourserver.com/owncloud/remote.php/webdav`. If you are prompted for your username and password but, after providing the correct credentials, authentication fails, please ensure that your authentication backend is configured properly.
+  If all desktop clients fail to connect to the ownCloud Server, but access using the Web interface functions properly, the problem is often a misconfiguration of the WebDAV API. The ownCloud Client uses the built-in WebDAV access of the server content. Verify that you can log on to ownCloud's WebDAV server. To verify connectivity with the ownCloud WebDAV server, open a browser window and enter the address to the ownCloud WebDAV server. For example, if your ownCloud instance is installed at `\https://yourserver.com/owncloud`, your WebDAV server address is `\https://yourserver.com/owncloud/remote.php/webdav`. If you are prompted for your username and password but, after providing the correct credentials, authentication fails, please ensure that your authentication backend is configured properly.
 
 Use a WebDAV command line tool to test::
   A more sophisticated test method for troubleshooting synchronization issues is to use a WebDAV command line client and log into the ownCloud WebDAV server. One such command line client -- called `cadaver` -- is available for Linux distributions. You can use this application to further verify that the WebDAV server is running properly using PROPFIND calls. As an example, after installing the `cadaver` app, you can issue the `propget` command to obtain various properties pertaining to the current directory and also verify WebDAV server connection.
 
-== "CSync unknown error"
+== CSync Unknown Error
 
 If you see this error message stop your client, delete the `._sync_xxxxxxx.db` file, and then restart your client. There is a hidden `._sync_xxxxxxx.db` file inside the folder of every account configured on your client.
 
@@ -46,7 +45,7 @@ Other issues can affect synchronization of your ownCloud files:
 The data directory on the server is exclusive to ownCloud and must not be modified manually.
 
 * If you are using a different file backend on the server, you can try to exclude a bug in the backend by reverting to the built-in backend.
-* If you are experiencing slow upload/download speed or similar performance issues be aware that those could be caused by on-access virus scanning solutions, either on the server (like {files-antivirus-app-url}[the files_antivirus app]) or the client.
+* If you are experiencing slow upload/download speed or similar performance issues be aware that those could be caused by on-access virus scanning solutions, either on the server (like the {files-antivirus-app-url}[files_antivirus app]) or the client.
 ====
 
 == Log Files
@@ -131,6 +130,7 @@ Thanks to the Qt framework, logging can be controlled at run-time through the QT
 ----
 QT_LOGGING_RULES='gui.socketapi=false;sync.database*=false' \
   /PATH/TO/CLIENT \
+  --logdebug --logfile <file>
 ----
 
 *Add HTTP logging entries*
@@ -166,7 +166,7 @@ It can be helpful to view your webserver's error log file to isolate any ownClou
 * `error_log` -- Maintains errors associated with PHP code.
 * `access_log` -- Typically records all requests handled by the server; very useful as a debugging tool because the log line contains information specific to each request and its result.
 
-You can find more information about Apache logging at `http://httpd.apache.org/docs/current/logs.html`.
+You can find more information about Apache logging at `http://httpd.apache.org/docs/current/logs.html`
 
 == Core Dumps
 
