Streamline item flow as prerequisite for WIN-VFS

--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -1,17 +1,16 @@
 * xref:index.adoc[Introduction]
 * xref:installing.adoc[Installing the Desktop Synchronization Client]
 * xref:navigating.adoc[Using the Synchronization Client]
-* xref:removing.adoc[Removing the Client]
 * xref:conflicts.adoc[Manage Synchronisation Conflicts]
+* xref:automatic_updater.adoc[Automatic Updating the Client]
+* xref:removing.adoc[Removing the Client]
+* xref:faq.adoc[FAQ]
 * xref:advanced_usage/index.adoc[Advanced Usage]
 ** xref:advanced_usage/command_line_options.adoc[Options]
 ** xref:advanced_usage/configuration_file.adoc[Configuration File]
 ** xref:advanced_usage/environment_variables.adoc[Environment Variables]
 ** xref:advanced_usage/command_line_client.adoc[Command-Line Client]
 ** xref:advanced_usage/low_disk_space.adoc[Low Disk Space]
-* xref:automatic_updater.adoc[The Automatic Updater]
-* xref:faq.adoc[FAQ]
-* xref:glossary.adoc[Glossary]
 * xref:appendices/index.adoc[Appendices]
 ** xref:appendices/building.adoc[Building the Client]
 ** xref:appendices/architecture.adoc[History and Architecture]
